# favis

./: .gitignore  Cargo.toml  ERROR_IMPROVEMENTS.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  icon_sizes.rs  img.rs  link.rs  main.rs  manifest.rs  progress.rs  svg.rs
