[package]
name = "wfig"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
image = "0.25.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ico = "0.4"
resvg = "0.45.1"
tiny-skia = "0.11"  # Required by resvg
usvg = "0.45.1"       # Required by resvg
indicatif = "0.17.11"
owo-colors = "4.2.1"
