[package]
name = "favis"
version = "0.2.0"
edition = "2021"
authors = ["E. M. Santos <contact@supitsdu.me"]
license = "MIT"
description = "favis turns one image into all the favicons and web assets you need — fast, free, and open-source."
homepage = "https://github.com/supitsdu/favis"
repository = "https://github.com/supitsdu/favis"
readme = "README.md"
keywords = ["favicon", "cli", "rust"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
image = "0.25.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ico = "0.4"
resvg = "0.45.1"
tiny-skia = "0.11"  # Required by resvg
usvg = "0.45.1"       # Required by resvg
indicatif = "0.17.11"
owo-colors = "4.2.1"
ctrlc = "3.4"         # For graceful signal handling
